bubba-frontend (1.2.4.22) claire estelle; urgency=low

  * Network manager and profile stuff

 -- Carl Fürstenberg <carl@excito.com>  Fri, 08 Jan 2010 17:27:19 +0100

bubba-frontend (1.2.4.20) claire estelle; urgency=low

  * only use single call to set interface 

 -- Carl Fürstenberg <carl@excito.com>  Tue, 05 Jan 2010 17:09:56 +0100

bubba-frontend (1.2.4.19) claire estelle; urgency=low

  [ Carl Fürstenberg ]
  * adding calls to interface set functions 

  [ PA Nilsson ]
  * Updated network UI with "auto" profile.

 -- Carl Fürstenberg <carl@excito.com>  Tue, 05 Jan 2010 16:51:59 +0100

bubba-frontend (1.2.4.18) karmic; urgency=low

  * fix logic in WEP validation 

 -- Carl Fürstenberg <carl@excito.com>  Mon, 04 Jan 2010 17:23:32 +0100

bubba-frontend (1.2.4.17) claire estelle; urgency=low

  * Testing multiple distributions 

 -- Carl Fürstenberg <carl@excito.com>  Mon, 04 Jan 2010 11:30:24 +0100

bubba-frontend (1.2.4.16) claire; urgency=low

  * Added a restart of hostapd when reconfiguring
  * Fixed bug in wlan_view that rendered config useless 

 -- Tor Krill <tor@excito.com>  Sun, 03 Jan 2010 23:12:59 +0100

bubba-frontend (1.2.4.15) claire; urgency=low

  * Fixed read out network config when if was down. 
  * Refactored all code to use query_service in the same way as 
    service_running. It now returns true if service is enabled 

 -- Tor Krill <tor@excito.com>  Sun, 03 Jan 2010 15:38:04 +0100

bubba-frontend (1.2.4.14) karmic; urgency=low

  * channels 

 -- Carl Fürstenberg <carl@excito.com>  Wed, 30 Dec 2009 18:51:51 +0100

bubba-frontend (1.2.4.13) claire; urgency=low

  * Network manager integration.

 -- Tor Krill <tor@excito.com>  Wed, 09 Dec 2009 21:16:17 +0100

bubba-frontend (1.2.4.12) claire; urgency=low

  * Preconfigure ap with right if. 

 -- Tor Krill <tor@excito.com>  Tue, 01 Dec 2009 15:03:21 +0100

bubba-frontend (1.2.4.11) claire; urgency=low

  * Add dnsmasq modification and restart when changing lan if 
