@@ -1,3 +1,9 @@
+bubba-frontend (1.2.4.23) claire estelle; urgency=low
+
+  * svn add
+
+ -- Carl Fürstenberg <carl@excito.com>  Fri, 08 Jan 2010 17:29:29 +0100
+
 bubba-frontend (1.2.4.22) claire estelle; urgency=low
 
   * Network manager and profile stuff
